Fixing media on mobile...

--- a/Blog/LogInPage/login.css
+++ b/Blog/LogInPage/login.css
@@ -66,7 +66,7 @@ header{
     font-weight:normal;
 }
 
-@media screen and (max-width: 700px){
+@media only screen and (max-device-width: 700px){
     .home li a{
         font-size: 55px;
     }
