--- a/Blog/blog.css
+++ b/Blog/blog.css
@@ -64,7 +64,7 @@ body {
     color: red;
 }
 
-@media screen and (max-width: 700px){
+@media only screen and (max-device-width: 700px){
     .post-line{
         flex-direction: column;
         align-items: center;
