--- a/index.css
+++ b/index.css
@@ -4,6 +4,13 @@ body {
     height: 750px;
     background-position: center;
     background-size: cover; */
+
+    margin:0;
+    padding:0;
+
+}
+
+#content-body{
     background-color: black;
     background-image: radial-gradient( rgba(0, 150, 0, 0.75), black 120%);
     color: white;
@@ -18,6 +25,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+
+.version{
+    position:absolute;
+    padding:0;
+    margin:0;
+    color: white;
 }
 
 #content-body ul {
@@ -114,20 +128,20 @@ body {
     }
 }
 
-@media screen and (max-width: 1000px){
+@media only screen and (max-device-width: 1000px){
     .typing{
         font-size: 25px;
     }
 }
 
 
-@media screen and (max-width: 700px){
+@media only screen and (max-device-width: 700px){
     .typing{
         font-size: 20px;
     }
 }
 
-@media screen and (max-width: 560px){
+@media only screen and (max-device-width: 560px){
     .typing{
         font-size: 15px;
     }
@@ -137,7 +151,7 @@ body {
     }
 }
 
-@media screen and (max-width: 420px){
+@media only screen and (max-device-width: 420px){
     .typing{
         font-size: 10px;
     }
